--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 title: "" # the name of your site, e.g. ACME Corp.
 plugins:
   - jekyll-postcss
+sass:
+  load_paths:
+    - _sass
+    - node_modules
+
+include: ["node_modules/tailwindcss"]
